// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build army 1`] = `
<DocumentFragment>
  <p
    class="css-8t79ir-StyledP e19maj680"
  >
    <span
      class="action"
    >
      build
    </span>
    <span
      class="piece"
    >
      army
    </span>
    in 
    <span
      class="source"
    >
      london
    </span>
  </p>
</DocumentFragment>
`;

exports[`Build fleet 1`] = `
<DocumentFragment>
  <p
    class="css-8t79ir-StyledP e19maj680"
  >
    <span
      class="action"
    >
      build
    </span>
    <span
      class="piece"
    >
      fleet
    </span>
    in 
    <span
      class="source"
    >
      london
    </span>
  </p>
</DocumentFragment>
`;

exports[`Convoy 1`] = `
<DocumentFragment>
  <p
    class="css-8t79ir-StyledP e19maj680"
  >
    <span
      class="piece"
    >
      army
    </span>
    in 
    <span
      class="source"
    >
      london
    </span>
    to 
    <span
      class="action"
    >
      convoy
    </span>
    <span
      class="aux"
    >
      york
    </span>
    to 
    <span
      class="target"
    >
      wales
    </span>
  </p>
</DocumentFragment>
`;

exports[`Hold 1`] = `
<DocumentFragment>
  <p
    class="css-8t79ir-StyledP e19maj680"
  >
    <span
      class="piece"
    >
      army
    </span>
    in 
    <span
      class="source"
    >
      london
    </span>
    to 
    <span
      class="action"
    >
      hold
    </span>
  </p>
</DocumentFragment>
`;

exports[`Move 1`] = `
<DocumentFragment>
  <p
    class="css-8t79ir-StyledP e19maj680"
  >
    <span
      class="piece"
    >
      army
    </span>
    in 
    <span
      class="source"
    >
      london
    </span>
    to 
    <span
      class="action"
    >
      move
    </span>
    to 
    <span
      class="target"
    >
      wales
    </span>
  </p>
</DocumentFragment>
`;

exports[`Retreat 1`] = `
<DocumentFragment>
  <p
    class="css-8t79ir-StyledP e19maj680"
  >
    <span
      class="piece"
    >
      army
    </span>
    in 
    <span
      class="source"
    >
      london
    </span>
    to 
    <span
      class="action"
    >
      retreat
    </span>
    to 
    <span
      class="target"
    >
      wales
    </span>
  </p>
</DocumentFragment>
`;

exports[`Support 1`] = `
<DocumentFragment>
  <p
    class="css-8t79ir-StyledP e19maj680"
  >
    <span
      class="piece"
    >
      army
    </span>
    in 
    <span
      class="source"
    >
      london
    </span>
    to 
    <span
      class="action"
    >
      support
    </span>
    <span
      class="aux"
    >
      york
    </span>
    to 
    <span
      class="target"
    >
      wales
    </span>
  </p>
</DocumentFragment>
`;